--- a/README.org
+++ b/README.org
@@ -32,3 +32,7 @@ which there was little or no activity.  Thus the name of this package.
   (with-eval-after-load 'magit (require 'sisyphus))
 #+end_src
 
+#+html: <br><br>
+#+html: <a href="https://github.com/magit/sisyphus/actions/workflows/compile.yml"><img alt="Compile" src="https://github.com/magit/sisyphus/actions/workflows/compile.yml/badge.svg"/></a>
+#+html: <a href="https://stable.melpa.org/#/sisyphus"><img alt="MELPA Stable" src="https://stable.melpa.org/packages/sisyphus-badge.svg"/></a>
+#+html: <a href="https://melpa.org/#/sisyphus"><img alt="MELPA" src="https://melpa.org/packages/sisyphus-badge.svg"/></a>
